# wiki

./: .dockerignore  .gitignore  .nextest-config.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  node.js.yml  rust.yaml
ci/: Cargo.toml  README.md
ci/src/: docker.rs  lib.rs  main.rs  shell.rs  stages.rs
ci/src/stages/: build_images.rs  dev_e2e.rs  nodejs_checks.rs  prepare_contexts.rs  rust_checks.rs
images/: build-v2.Dockerfile  build.Dockerfile  e2e.Dockerfile  wiki.Dockerfile  wiki.Dockerfile.dockerignore
images/ui/: test.Dockerfile
tools/: Cargo.toml
tools/src/: ci.rs  http.rs  main.rs  update_mime_types.rs
tools/src/ci/: build_images.rs
ui/: .gitignore  README.md  ci-cypress-reporter-config.json  config.default.json  cypress.config.js  eslint.config.js  index.html  package-lock.json  package.json
ui/cypress/e2e/: spec.cy.js
ui/public/: index.html
ui/spec/: README.md
ui/src/: main.js
ui/src/api/mock/: subject.js  subjects.json
ui/src/api/server/: subject.js
ui/src/auth/mock/: user.js  users.json
ui/src/auth/server/: user.js
ui/src/components/: App.js  EditSubject.js  ListSubjects.js  ListSubjects.test.js  Router.js  Router.test.js  Subject.js  Subject.test.js  User.js  User.test.js  ViewSubject.js  ViewSubject.test.js
ui/src/store/: inject.js  route.js  route.test.js  router.js  router.test.js  subjects.js  subjects.test.js  title.js  user.js  user.test.js
ui/src/test-helpers/: build.js  dom.js  waitFor.js
ui/src/test-helpers/mock/: api.js  auth.js
ui/tools/: build-options.js  build.js  configure.js  dev-server.js  is-main.js  prod.js  serve.js
wiki/: Cargo.toml  build.rs  mime_types.yaml
wiki/src/: api.rs  auth.rs  error.rs  lib.rs  main.rs  mime_types.json  spa_server.rs
wiki/src/api/: error.rs  persistence.rs  subject.rs
wiki/src/api/persistence/: postgres.rs
wiki/src/auth/: mock_user.rs  user.rs
wiki/src/auth/persistence/: postgres.rs
wiki/src/persistence/: postgres.rs
wiki/src/persistence/migrations/: V1__create_subjects.sql
wiki/src/v0/api/persistence/: postgres.rs
wiki/src/v0/auth/: persistence.rs
