[package]
name = "tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
regex = "1.11.1"
reqwest = "0.12.15"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
