[package]
name = "wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
clap = "4.5.23"
log = "0.4.22"
phf = "0.11.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
regex = "1.11.1"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
warp = "0.3.7"

[build-dependencies]
ignore = "0.4.23"
phf_codegen = "0.11.2"
serde_yaml = "0.9.34"

[dev-dependencies]
phf = { version = "0.11.2", features = ["macros"] }
