[package]
name = "wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
clap = "4.5.27"
log = "0.4.25"
phf = "0.11.3"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
regex = "1.11.1"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.12"
warp = "0.3.7"

[build-dependencies]
ignore = "0.4.23"
phf_codegen = "0.11.3"
serde_yaml = "0.9.34"

[dev-dependencies]
phf = { version = "0.11.3", features = ["macros"] }
